--- a/style.css
+++ b/style.css
@@ -14,308 +14,363 @@
 }
 
 * {
- padding: 0;
- margin: 0;
- box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
- font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: blue;
 }
 
 .wrapper {
- width: 100;
- min-height: 100vh;
- background-color:hsl(206, 94%, 87%);
- display: flex;
- flex-direction: column;
- position: relative;
+  width: 100%;
+  min-height: 100vh;
+  background-color:hsl(206, 94%, 87%);
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
 .left-container {
- background:url('./assets/images/bg-sidebar-mobile.svg');
- background-position: center;
- background-repeat: no-repeat;
- background-size: cover;
- height: 30vh;
- display: flex;
+  background:url('./assets/images/bg-sidebar-mobile.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 30vh;
+  display: flex;
 
- position: relative;
+  position: relative;
 }
 
 .step-detail {
- display: none;
+  display: none;
 }
 
 .steps {
- position: relative;
- left: 80px;
- top: 10px;
- margin-right: 1em;
+  position: relative;
+  left: 80px;
+  top: 10px;
+  margin-right: 1em;
 }
 
 .step {
- background: transparent;
- color: hsl(231, 100%, 99%);
- border: 1.5px solid hsl(231, 100%, 99%);
- font-size: 1.1rem;
- padding: .3em .8em;
- border-radius: 50%;
- font-weight: 500;
- display: flex;
- align-self: center;
+  background: transparent;
+  color: hsl(231, 100%, 99%);
+  border: 1.5px solid hsl(231, 100%, 99%);
+  font-size: 1.1rem;
+  padding: .3em .8em;
+  border-radius: 50%;
+  font-weight: 500;
+  display: flex;
+  align-self: center;
 }
 
 .active-step {
- background-color: hsl(217, 100%, 97%);
- color: hsl(213, 96%, 18%);
+  background-color: hsl(217, 100%, 97%);
+  color: hsl(213, 96%, 18%);
 }
 
 /* WORKING WITH INPUT FIELD 1 */
 .right-container {
- position: absolute;
- top: 50px;
- width: 100%;
+  position: relative;
+  width: 100%;
+  min-height: auto;
+  background-color:hsl(217, 100%, 97%);
+  display: flex;
+  justify-content: space-between;
 }
 
-
+.text-box {
+  background-color: hsl(231, 100%, 99%);
+  border-radius: 7px;
+  padding: 1.5em;
+  width: 90%;
+  position: relative;
+  top: -80px;
+  margin: 1em;
+  align-self: center;
+}
 
 .in-view {
- background-color: hsl(231, 100%, 99%);
- border-radius: 7px;
- padding: 1.5em;
- margin: .5em 1em;
- display: none;
+  display: none;
 }
 
 .active-view {
- display:grid;
+  display:flex;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+  
 }
 
 .in-view div {
- margin: .5em 0;
+  margin: .5em 0;
 }
 
 .heading {
- font-size: 1.6rem;
- font-size: bold;
- color: hsl(213, 96%, 18%);
+  font-size: 1.6rem;
+  font-size: bold;
+  color: hsl(213, 96%, 18%);
 }
 
 .info-text {
- font-size: 1rem;
- font-weight: 500;
- line-height: 1.4em;
- color:hsl(231, 11%, 63%);
- margin-bottom: 1em;
+  font-size: 1.02rem;
+  font-weight: 500;
+  line-height: 1.4em;
+  color:hsl(231, 11%, 63%);
+  margin-bottom: 1em;
 }
 
 
 input {
- width: 100%;
- font-size: 1rem;
- padding: .6em .0em .6em .6em;
- border-radius: 3px;
+  width: 100%;
+  font-size: 1rem;
+  padding: .6em .0em .6em .6em;
+  border-radius: 3px;
 }
 
 input::placeholder {
- font-size: .9rem;
- font-weight: 600;
- color:hsl(229, 24%, 87%)
+  font-size: .9rem;
+  font-weight: 600;
+  color:hsl(229, 24%, 87%)
 }
 
 label {
- font-weight: 600;
- color:hsl(213, 96%, 18%);
+  font-weight: 600;
+  color:hsl(213, 96%, 18%);
 }
 
 .label-err {
- display: flex;
- justify-content: space-between;
- font-size: .9rem;
- margin-bottom: .1em;
+  display: flex;
+  justify-content: space-between;
+  font-size: .9rem;
+  margin-bottom: .1em;
 }
 
 /* NEXT AND PREV BUTTON */
 .nxt-btn {
- display: flex;
- justify-content: space-between;
- /* position: absolute;
- bottom: -50px; */
- background-color: hsl(0, 0%, 100%);
- padding: 1em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  top: 15px;
+  padding: .5em;
+  width: 100%;
+  background-color:hsl(231, 100%, 99%);
 }
 
 .prev-btn {
- background-color: transparent;
- border: none;
- font-weight: 600;
- font-size: 1rem;
- color:hsl(231, 11%, 63%);
+  background-color: transparent;
+  border: none;
+  font-weight: 600;
+  font-size: 1rem;
+  color:hsl(231, 11%, 63%);
 }
 
 .next-btn {
- background-color:hsl(213, 96%, 18%);
- padding: .7em 1em;
- color:hsl(0, 0%, 100%);
- border: none;
- border-radius: 4px;
+  background-color:hsl(213, 96%, 18%);
+  padding: .7em 1em;
+  color:hsl(0, 0%, 100%);
+  border: none;
+  border-radius: 4px;
 }
 
+
 /* SELECT PLAN */
-.toggle-plan {
- display: none;
+.toggle-plan, .finish-up {
+  display: none;
 }
 .active-toggle-plan {
- display: flex;
- flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .plan {
- display: flex;
- align-items: center;
+  display: flex;
+  align-items: center;
 
- padding: .5em;
- border-radius: 5px;
- background: transparent;
- border: 1px solid hsl(231, 11%, 63%);
+  padding: .3em;
+  border-radius: 5px;
+  background: transparent;
+  border: 1px solid hsl(231, 11%, 63%);
 }
 
 .active-plan {
- background-color: hsl(206, 94%, 87%);
- border: 1px solid hsl(243, 100%, 62%);
+  background-color: hsl(206, 94%, 87%);
+  border: 1px solid hsl(243, 100%, 62%);
 }
 .plan-icon {
- width: 2em;
- margin-right: 1em;
+  width: 2em;
+  margin-right: 1em;
 }
 
 .plan-heading {
- font-size: 1.2rem;
- font-family: 600;
- color:hsl(213, 96%, 18%);
+  font-size: 1.2rem;
+  font-family: 600;
+  color:hsl(213, 96%, 18%);
 }
 
 .plan-price {
- font-size: .9rem;
- font-weight: 500;
- color:hsl(231, 11%, 63%);
+  font-size: .9rem;
+  font-weight: 500;
+  color:hsl(231, 11%, 63%);
 }
 
 /* MONTHLY AND YEARLY */
 .subscription-method {
- background-color:hsl(217, 100%, 97%);
- display: flex;
- justify-content: center;
- align-items: center;
- padding: .5em;
+  background-color:hsl(217, 100%, 97%);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: .2em;
+
 }
-
 .switch {
- width: 50px;
- height: 25px;
- background-color:hsl(213, 96%, 18%);
- padding: .2em;
- border-radius: 50px;
+  width: 50px;
+  height: 25px;
+  background-color:hsl(213, 96%, 18%);
+  padding: .2em;
+  border-radius: 50px;
 
- display: flex;
- align-items: center;
+  display: flex;
+  align-items: center;
+  position: relative;
 }
 
 .switch-toggle {
- height: 17px;
- width: 17px;
- background-color:hsl(0, 0%, 100%);
- border-radius: 50%;
+  height: 18px;
+  width: 18px;
+  background-color:hsl(0, 0%, 100%);
+  border-radius: 50%;
+  position: relative;
+  left: 0px;
+  transition: all .6s;
+}
+
+.active-toggle {
+  left: 25px;
 }
 
 /* MONTH SUB */
 .sub-bonus {
- margin-top: .4em;
- font-size: .9rem;
- color:hsl(213, 96%, 18%);
+  margin-top: .4em;
+  font-size: .9rem;
+  color:hsl(213, 96%, 18%);
+  font-weight: 600;
 }
 
 .add-ons {
- display: none;
+  display: none;
 }
 
 .active-add-ons {
- display: flex;
- flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .add-on {
- display: grid;
- grid-template-columns: 1fr 5fr 1fr;
- align-items: center;
- background-color: hsl(231, 100%, 99%);
- padding: .5em;
- border-radius: 8px;
- border: 1px solid hsl(213, 96%, 18%);
+  display: grid;
+  grid-template-columns: 1fr 5fr 1fr;
+  align-items: center;
+  background-color: hsl(231, 100%, 99%);
+  padding: .5em;
+  border-radius: 8px;
+  border: 1px solid hsl(213, 96%, 18%);
 }
 
 .add-icon {
- background: hsl(243, 100%, 62%);
- border-radius: 5px;
- padding: .4em .3em;
+  background: hsl(243, 100%, 62%);
+  border-radius: 5px;
+  padding: .4em .3em;
 }
 
 .add-on-heading {
- font-weight: bolder;
- font-size: 1rem;
- color:hsl(213, 96%, 18%);
+  font-weight: bolder;
+  font-size: 1rem;
+  color:hsl(213, 96%, 18%);
 }
 
 .add-on-info {
- font-size: .8rem;
- color:hsl(231, 11%, 63%);
+  font-size: .8rem;
+  color:hsl(231, 11%, 63%);
 }
 
 .add-on-price {
- color:hsl(243, 100%, 62%);
- font-size: bolder;
+  color:hsl(243, 100%, 62%);
+  font-size: bolder;
 }
 
 .check-box {
- height: 22px;
- width: 22px;
+  height: 22px;
+  width: 22px;
 }
 
 /* FINISHING UP */
-.finish-up {
- background-color:hsl(217, 100%, 97%);
- padding: .5em;
- border-radius: 8px;
+.active-finish {
+  display: grid;
+  background-color:hsl(217, 100%, 97%);
+  padding: .5em;
+  border-radius: 8px;
+  color: hsl(231, 11%, 63%);
+}
+
+.finish-up div {
+  margin: 1em 0;
+}
+
+.confirm-plan, .total-amount {
+  font-weight: bold;
+  color:hsl(213, 96%, 18%);
+}
+
+.c-plan {
+  padding-bottom: 1em;
+  border-bottom: 1px solid hsl(231, 11%, 63%);
+}
+
+.confirm-add-on {
+  margin-top: em;
 }
 
 .total {
- display: flex;
- justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
+  color: hsl(231, 11%, 63%);
+}
+
+.total-mo-yr, .total-amount {
+  margin-top: 1em;
 }
 
 .total-amount {
- margin-right: 17px;
+  margin-right: 17px;
 }
 
 
 
 .confirm-plan, .confirm-add-on{
- display: grid;
- grid-template-columns: 4fr 1fr;
+  display: grid;
+  grid-template-columns: 4fr 1fr;
+  grid-row-gap: 1em;
 }
 
 
 /* Js */
 .hidden {
- display: none;
+  display: none;
 }
 
 .name-err-message, .no-err-message, .mail-err-message {
- font-size: .7rem;
- color: hsl(354, 84%, 57%);;
+  font-size: .7rem;
+  color: hsl(354, 84%, 57%);;
 }
 
 .email-field, .number-field, .name-field {
- border: 1px solid hsl(229, 24%, 87%);
+  border: 1px solid hsl(229, 24%, 87%);
+}
+
+.nxt-btn a {
+  text-decoration: none;
 }
